--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
       <img src="./imagem/clouds.png" class="nuvem">
       <img src="./imagem/mario.gif" class="mario">
       <img src="./imagem/pipe.png" class="pipe">
+      <button class="start" onclick="starGame()">Iniciar</button>
     </div>
 
+    <div class="Game Over"><h1>Game Over</h1><button onclick="restartGame()">Reiniciar</button>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>  
