--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <button class="start" onclick="starGame()">Iniciar</button>
     </div>
 
+    <div class="score">Pontuação: <span id="score">0</span></div>
+    
     <div class="Game Over"><h1>Game Over</h1><button onclick="restartGame()">Reiniciar</button>
     </div>
     <script src="main.js"></script>
